--- a/index.html
+++ b/index.html
@@ -5,42 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Min sommar</title>
-  <style>
-    body {
-      font-family: system-ui, sans-serif;
-      font-size: 1.2rem;
-    }
-    .container {
-      max-width: 80ch;
-      margin: 0 auto;
-    }
-    img {
-      width: 100%;
-      height: 50vh;
-      object-fit: cover;
-      object-position: center;
-      aspect-ratio: 16/9;
-    }
-
-    .flow>*+* {
-      margin-block-start: var(--flow-space, 1em);
-    }
-
-    .input-group {
-      --flow-space: .5em;  
-    }
-    input {
-      width: 100%;
-      padding: 0.5em;
-      font-size: 1em;
-      border: 1px solid #ccc;
-      border-radius: 0.5em;
-    }
-
-    main {
-      padding-bottom: 4rem;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
