--- a/centrerad.html
+++ b/centrerad.html
@@ -22,6 +22,9 @@
       <li>
         <a href="om.html">Om</a>
       </li>
+      <li>
+        <a href="https://github.com/jensadev/wu2-sommar">GitHub</a>
+      </li>
     </ul>
   </nav>
   <header class="hero">
